<resources>
    <string name="app_name">Heroutine</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signInText">Heroutine</string>
    <string name="menuTitleMyDay">My Day</string>
    <string name="menuTitleWorkout">Workout</string>
    <string name="menuTitleDiet">Diet</string>
    <string name="menuTitleAccount">Account</string>
    <string name="emailTextHint">Email</string>
    <string name="passwordTextHint">Password</string>
    <string name="forgotPasswordButtonText">Forgot password? Click here</string>
    <string name="loginButtonText">Login</string>
    <string name="signUpButtonText">Tap here if you don\'t have an account</string>
    <string name="signUpText">Comece criando\n a sua conta</string>
    <string name="createPasswordText">Crie uma senha</string>
    <string name="confirmPasswordText">Confirme a senha</string>
    <string name="createAccountButtonText">Criar conta</string>
    <string name="usernameTextHint">Nome de usuário</string>
    <string name="enterEmailTextHint">Escolha seu melhor e-mail</string>
    <string name="passwordTextHint_pt_br">Senha</string>
    <string name="forgotPasswordTextButton_pt_br">Esqueceu sua senha? Clique aqui</string>
</resources>