<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_my_day"
        android:enabled="true"
        android:icon="@drawable/ic_star_24"
        android:title="@string/menuTitleMyDay" />

    <item
        android:id="@+id/navigation_workout"
        android:enabled="true"
        android:icon="@drawable/ic_run_24"
        android:title="@string/menuTitleWorkout" />

    <item
        android:id="@+id/navigation_diet"
        android:enabled="true"
        android:icon="@drawable/ic_diet_24"
        android:title="@string/menuTitleDiet" />

    <item
        android:id="@+id/navigation_account"
        android:enabled="true"
        android:icon="@drawable/ic_account_24"
        android:title="@string/menuTitleAccount" />

</menu>